--- a/style.css
+++ b/style.css
@@ -1,40 +1,173 @@
 /* ==================================== *\
 /*    ======== GENERAL STYLING ======== *|
 \* ==================================== */
+:root {
+    --green: #27ae60;
+    --black: #192a56;
+    --light-color: #bbb;
+    --box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-transform: capitalize;
+    transition: all .2s linear;
+    text-decoration: none;
+}
+html {
+    font-size: 62%;
+    overflow: hidden;
+    scroll-padding-top: 5.5rem;
+    scroll-behavior: smooth;
 }
 section {
-    block-size: 100vh;
-    inline-size: 100%;
+    padding: 2rem 9%;
+}
+section:nth-child(even) {
+    background: #eee;
 }
 
 /* ==================================== *\
 /*    ======== HEADER STYLING ======== *|
 \* ==================================== */
-section nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header {
     position: fixed;
-    left: 0;
-    right: 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    inset-block-start: 0;
+    inset-inline-start: 0;
+    inset-inline-end: 0;
+    background: #ffff;
+    padding: 1rem 7%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     z-index: 1000;
-    box-shadow: #fff;
+    box-shadow: var(--box-shadow);
 }
-section nav .logo img {
-    inline-size: 75px;
-    block-size: 75px;
+.header .logo img{
+    inline-size: 50px;
+    block-size: 50px;
+}
+.header .navbar a {
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    padding: .5rem 1.5rem;
+    color:#000;
+}
+.header .navbar a.active,
+.header .navbar a:hover {
+    color: var(--green);
+}
+.header .icons i,
+.header .icons a {
     cursor: pointer;
-    margin: 5px 0;
+    margin-inline-start: .5rem;
+    block-size: 4.5rem;
+    line-height: 4.5rem;
+    inline-size: 4.5rem;
+    text-align: center;
+    font-size: 1.7rem;
+    color: var(--black);
+    border-radius: 50%;
+    background: #eee;
 }
-section nav ul {
-    list-style: none;
+.header .icons #bars {
+    display: none;
 }
-section nav ul li {
+
+
+/* ==================================== *\
+|*    ======== HERO STYLING ======== *|
+\* ==================================== */
+.home .home-slider .slide {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding-top: 9rem;
+}
+.home .home-slider .slide .content {
+    flex: 1 1 45rem;
+}
+.home .home-slider .slide .image {
+    flex: 1 1 45rem;
+}
+.home .home-slider .slide .image img {
+    inline-size: 100%;
+}
+.home .home-slider .slide .content span {
+    color: var(--green);
+    font-size: 2.5rem;
+}
+.home .home-slider .slide .content h3 {
+    color: var(--black);
+    font-size: 7rem;
+}
+.home .home-slider .slide .content p {
+    color: var(--light-color);
+    font-size: 2.2rem;
+    padding: .5rem 0;
+    line-height: 1.5;
+}
+.btn {
+    margin-top: 1rem;
     display: inline-block;
-    margin: 0 10px;
+    font-size: 1.7rem;
+    color: #ffff;
+    background: var(--black);
+    border-radius: .5rem;
+    cursor: pointer;
+    padding: .8rem 3rem;
+}
+
+
+
+
+
+
+
+/* ==================================== *\
+|*    ======== MEDIA QUERIES ======== *|
+\* ==================================== */
+@media (max-width:991px) {
+    html {
+        font-size: 55%;
+    }
+    .header {
+        padding: 1rem 2rem;
+    }
+}
+@media (max-width:768px) {
+    .header .icons #bars {
+        display: inline-block;
+    }
+    .header .navbar{
+       position: absolute;
+       top: 100%;
+       left: 0;
+       right: 0;
+       background: #ffff;
+       border-top: .1rem solid rgba(0,0,0,.2);
+       border-bottom: .1rem solid rgba(0,0,0,.2);
+       padding: 1rem;
+       clip-path: polygon(0 0, 100% 0,100% 0,0 0);
+    }
+    .header .navbar a.active,
+    .header .navbar a:hover {
+        background: var(--green);
+        color: #ffff;
+    }
+    .header  .navbar.active {
+        clip-path: polygon(0 0, 100% 0%,100% 100%,0% 100%);
+    }
+    .header  .navbar a {
+        display: block;
+        padding: 1.5rem;
+        margin: 1rem;
+        font-size: 2rem;
+        background: #eee;
+        color: #000;
+    }
 }
